// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`generatePluginsModule > empty plugin list produces a module with no static imports 1`] = `
"// AUTOGENERATED by vite-plugins/cytario-plugins.ts — do not edit.
// Run \`npm run codegen\` (or rebuild) to regenerate.
// See README.md "Plugin model" for the contract.

import type { CytarioPlugin, Logger } from "@cytario/plugin-api";
import type { BootstrapRegistries } from "~/lib/bootstrapPluginsCore";
import { bootstrapPluginsCore } from "~/lib/bootstrapPluginsCore";



const plugins: ReadonlyArray<CytarioPlugin> = [

];

// Built-in formats register inside ViewerStoreContext (client-only).
// Not imported here — viv/geotiff would break the SSR bundle.
export function bootstrapPlugins(
  logger: Logger,
  registries?: BootstrapRegistries,
): Promise<void> {
  return bootstrapPluginsCore(plugins, logger, registries);
}
"
`;

exports[`generatePluginsModule > single plugin: identifier is index-derived (plugin_0) 1`] = `
"// AUTOGENERATED by vite-plugins/cytario-plugins.ts — do not edit.
// Run \`npm run codegen\` (or rebuild) to regenerate.
// See README.md "Plugin model" for the contract.

import type { CytarioPlugin, Logger } from "@cytario/plugin-api";
import type { BootstrapRegistries } from "~/lib/bootstrapPluginsCore";
import { bootstrapPluginsCore } from "~/lib/bootstrapPluginsCore";

import plugin_0 from "@cytario/czi-loader";


const plugins: ReadonlyArray<CytarioPlugin> = [
  plugin_0,
];

// Built-in formats register inside ViewerStoreContext (client-only).
// Not imported here — viv/geotiff would break the SSR bundle.
export function bootstrapPlugins(
  logger: Logger,
  registries?: BootstrapRegistries,
): Promise<void> {
  return bootstrapPluginsCore(plugins, logger, registries);
}
"
`;
